<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acerca_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alephicabod.petagram.AcercaDeActivity">

    <include android:id="@+id/appBarDetalle" layout="@layout/appbar_detalle"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarDetalle"
        android:text="@string/mAbout"
        android:textSize="@dimen/titulo"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true">


        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreAcercaDe"
            android:textSize="@dimen/infoPet"
            android:textStyle="bold"
            android:textAlignment="center" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/perfil"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:textSize="@dimen/infoPet"
              android:textAlignment="center"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/github"
              android:textAlignment="center"
              android:layout_marginTop="@dimen/activity_vertical_margin"/>
    </LinearLayout>
</RelativeLayout>
