<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configurar_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alephicabod.petagram.ConfigurarCuentaActivity">

    <include android:id="@+id/appBarDetalle" layout="@layout/appbar_detalle"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@id/appBarDetalle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/titulo"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtusuario"
                android:id="@+id/usuario"
                android:textAlignment="center"
                />

        </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnUsuario"
                android:theme="@style/boton"
                android:onClick="guardarCuenta"
                />
    </LinearLayout>

</RelativeLayout>
